--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,10 @@ span {
     display: block;
     padding-top: 24px;
     padding-bottom: 24px;
-    color: #2e2f42;
+    display: block;
+    gap: 40px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: rgba(46, 47, 66, 1);
 }
 
 .menu-nav:hover,
@@ -1019,7 +1022,7 @@ span {
    }
        }
 
-       
+
 .footer-social-list {
     display: flex;
     align-items: center;
