--- a/css/styles.css
+++ b/css/styles.css
@@ -180,13 +180,23 @@ span {
     display: block;
     padding-top: 24px;
     padding-bottom: 24px;
-    display: block;
     gap: 40px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: rgba(46, 47, 66, 1);
 }
 
-.menu-nav:hover,
+@media screen and (min-width: 768px) {
+    .menu-nav {
+        display: block;
+            gap: 40px;
+            padding-top: 24px;
+            padding-bottom: 24px;
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            color: rgba(46, 47, 66, 1);
+        }
+ }
+
+        .menu-nav:hover,
 .menu-nav:focus {
     color: #404bbf;
 }
